# cpp_libs

./: .gitignore  CMakeLists.txt  README.md
bisection/: CMakeLists.txt  README.md  main.cpp  result.h  roots.hpp  simpletimer.hpp
cppmngr/: CMakeLists.txt  README.md  checkinstalled.cpp  checkinstalled.h  fileops.cpp  fileops.h  main.cpp
jsonparser/: CMakeLists.txt  json.cpp  json.h  main.cpp
macroland_app/: CMakeLists.txt
macroland_app/64Bit/home/: _init_.py  cmdline_history.json  recentproj.json
resultcls/: CMakeLists.txt  README.md  main.cpp
stringtonumber/: CMakeLists.txt  README.md  main.cpp  number.h
