project(jsonparser)


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/outdir)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/outdir)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${CMAKE_SOURCE_DIR}/outdir)

set(CMAKE_DEBUG_POSTFIX "_d")


add_executable(${PROJECT_NAME} main.cpp json.cpp)
